--- a/src/scripts/detect/.env
+++ b/src/scripts/detect/.env
@@ -1,8 +1,8 @@
-# === Project Base Directory ===
-BASE_DIR=C:\Users\Administrator\Desktop\digitization-pid
-OUTPUTS_DIR=C:\Users\Administrator\Desktop\digitization-pid\app\outputs
-DETECTIONS_DIR=C:\Users\Administrator\Desktop\digitization-pid\app\outputs\detections
-IMAGE_PATH=C:\Users\Administrator\Desktop\digitization-pid\src\data\test\images\test2.png
-MODEL_PATH=C:\Users\Administrator\Desktop\digitization-pid\src\models\object_detection\bestdetection_model.pt
-ARTIFACTS_PATH = C:\Users\Administrator\Desktop\digitization-pid\app\outputs\artifacts
-MODULES_ROOT=..
+# # === Project Base Directory ===
+# BASE_DIR=C:\Users\Administrator\Desktop\digitization-pid
+# OUTPUTS_DIR=C:\Users\Administrator\Desktop\digitization-pid\app
+# DETECTIONS_DIR=C:\Users\Administrator\Desktop\digitization-pid\app\detections
+# IMAGE_PATH=C:\Users\Administrator\Desktop\digitization-pid\src\data\test\images\test2.png
+# MODEL_PATH=C:\Users\Administrator\Desktop\digitization-pid\src\scripts\detect\models\object_detection\bestdetection_model.pt
+# ARTIFACTS_PATH = C:\Users\Administrator\Desktop\digitization-pid\app\artifacts
+# MODULES_ROOT=..
