--- a/src/prefect.yaml
+++ b/src/prefect.yaml
@@ -1,8 +1,13 @@
 name: pid-identification-deployment
 
+pull:
+  - prefect.deployments.steps.git_clone:
+      repository: "https://github.com/NasosSkaltsas/PID-Detection.git"
+      branch: master
+
 deployments:
   - name: pid-identification
-    entrypoint: "scripts/detect/flow.py:main_flow"
+    entrypoint: "src/scripts/detect/flow.py:main_flow"
 
     # Choose an existing work pool name from your Prefect UI
     work_pool:
@@ -11,7 +16,7 @@ deployments:
       job_variables:
         env:
           # Optional overrides; if omitted, code uses repo root
-          BASE_DIR: "../.."
+          BASE_DIR: ".."
           OUTPUTS_DIR: "digitization-pid/app"
           DETECTIONS_DIR: "digitization-pid/app/detections"
           ARTIFACTS_PATH: "digitization-pid/app/artifacts"
