--- a/src/prefect.yaml
+++ b/src/prefect.yaml
@@ -16,7 +16,7 @@ deployments:
       job_variables:
         env:
           # Optional overrides; if omitted, code uses repo root
-          BASE_DIR: ".."
+          BASE_DIR: "../.."
           OUTPUTS_DIR: "digitization-pid/app"
           DETECTIONS_DIR: "digitization-pid/app/detections"
           ARTIFACTS_PATH: "digitization-pid/app/artifacts"
